escaped specific characters

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF=8">
     <title>Patrick Stumbaugh Portfolio</title>
-    <link rel="stylesheet" href="../Portfolio/portfolioStyles.css" type="text/css">
+    <link rel="stylesheet" href="./portfolioStyles.css" type="text/css">
   </head>
 
   <body class="body">
@@ -105,7 +105,7 @@
               <th> Feb. 2015 - current</th>
             </tr>
             <tr>
-              <th>Lead director – 5pm newscast and Afternoon Live talk show </th>
+              <th>Lead director - 5pm newscast and Afternoon Live talk show </th>
             </tr>
             <tr>
               <th>Code show elements cohesive with Ignite software</th>
@@ -139,7 +139,7 @@
               <th> Feb. 2012 - Feb. 2015</th>
             </tr>
             <tr>
-              <th>Manage station’s video production operations via Ross OverDrive</th>
+              <th>Manage station&apos;s video production operations via Ross OverDrive</th>
             </tr>
             <tr>
               <th>Assimilate Vizrt graphics software with automation control</th>
