changed resume link to open in new window

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <br>
 
-    <a download href="./Resume, Patrick Stumbaugh.pdf" id="fullResume">Full Resume</a>
+    <a download target="_blank" href="./Resume, Patrick Stumbaugh.pdf" id="fullResume">Full Resume</a>
 
     <br><br><br>
 
