adding slideUp to sections

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     <!-- Work Experience Examples -->
 
     <table class="resumeTableContainer">
-      <th>
-
+        <th class="resumeTableContainerSlide">
+          
         <div class="headerTextBody">Current Employment</div>
         <br>
 
-        <table class="resumeTable">
+        <table id="resumeTable1">
           <thread>
-            <tr class="resumeTable">
+            <tr>
               <th class="tableTitle">Ignite (Production) Director</th>
               <th class="tableTitle2">KATU-TV</th>
             </tr>
@@ -123,12 +123,12 @@
         </table>
 
       </th>
-      <th>
+      <th class="resumeTableContainerSlide">
 
         <div class="headerTextBody">Previous Employment</div>
         <br>
 
-        <table class="resumeTable">
+        <table id="resumeTable2">
           <thread>
             <tr>
               <th class="tableTitle">Senior Ross OverDrive Director</th>
