adding blue bar

--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,8 @@
 
         <!-- welcome content -->
         <div class="aboutContainer">
+            <img id="aboutContainerTopRotated" src="./images/blueBar.png" />
+
             <img
                 class="codeExamplesClassReveal"
                 id="swipeUpArrows"
