--- a/index2.html
+++ b/index2.html
@@ -45,12 +45,9 @@
         </div>
 
         <!-- Nav Bar -->
-        <div class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-        </div>
+        <div class="navbar"></div>
 
+        <script type="JavaScript" src="react.js"></script>
         <script src="home.js"></script>
     </body>
 </html>
