--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,10 @@
         </div>
 
         <!-- Nav Bar -->
-        <div class="navbar"></div>
+        <div id="navbar">
+            <a href="#home" class="active">Home</a>
+            <a>item 2</a>
+        </div>
 
         <script type="JavaScript" src="react.js"></script>
         <script src="home.js"></script>
