--- a/index2.html
+++ b/index2.html
@@ -33,11 +33,11 @@
             <img id="aboutContainerTopRotated" src="./images/blueBar.png" />
 
             <img
-                class="codeExamplesClassReveal"
+                class="hiddenStart"
                 id="swipeUpArrows"
                 src="./images/swipeUp.gif"
             />
-            <div class="codeExamplesClassReveal" id="about">
+            <div class="hiddenStart" id="about">
                 <p>Hello world!</p>
                 <p>My name is Pat Stumbaugh.</p>
                 <p>I am a jr. software developer and website designer</p>
@@ -45,12 +45,26 @@
         </div>
 
         <!-- Nav Bar -->
-        <div id="navbar">
-            <a href="#home" class="active">Home</a>
-            <a>item 2</a>
+        <div class="hiddenStart" id="navbar">
+            <a class="NBalignLeft">Patrick Stumbaugh</a>
+            <a
+                class="NBalignLeft"
+                target="_blank"
+                href="https://github.com/pstumbaugh/PORTFOLIO-Web-Development-HTML5-CSS-Node.js-JavaScript-C-Cpp-Flutter-Dart-Rust-Assembly-Language"
+                >GitHub</a
+            >
+            <a
+                class="NBalignLeft"
+                target="_blank"
+                href="https://www.linkedin.com/in/patrick-stumbaugh-7625662a"
+                >LinkedIn</a
+            >
+            <a class="NBalignRight" href="tel:650-868-3189">650-868-3189</a>
+            <a class="NBalignRight" href="mailto:stumbaugh.patrick@gmail.com"
+                >stumbaugh.patrick@gmail.com</a
+            >
         </div>
 
-        <script type="JavaScript" src="react.js"></script>
         <script src="home.js"></script>
     </body>
 </html>
