updating about me code section

--- a/index2.html
+++ b/index2.html
@@ -9,29 +9,13 @@
     </head>
 
     <body class="body">
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
-        <div>here's some more content</div>
+        <!-- Code introduction -->
+        <div>TEST</div>
+        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
         <!-- welcome content -->
+        <img id="aboutContainerTopRotated" src="./images/blueBar.png" />
         <div class="aboutContainer">
-            <img id="aboutContainerTopRotated" src="./images/blueBar.png" />
-
             <img
                 class="hiddenStart"
                 id="swipeUpArrows"
